--- a/KerbalWinDownloader/KerbalWinDownloader.csproj
+++ b/KerbalWinDownloader/KerbalWinDownloader.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="KerbalProjectManager.cs" />
     <Compile Include="KerbalProjectSystem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
