--- a/KerbalServer/Web.config
+++ b/KerbalServer/Web.config
@@ -18,6 +18,7 @@
       <compilation debug="true" targetFramework="4.5"/>
       <httpRuntime targetFramework="4.5" maxRequestLength="31457280"/>
     <httpModules>
+      <remove name="WebDAVModule" />
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah"/>
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah"/>
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah"/>
@@ -26,6 +27,7 @@
 <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAV" />
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler"/>
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler"/>
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler"/>
@@ -51,7 +53,10 @@
         <allow roles="admin"/>
         <deny users="*"/>  
       </authorization>
-      -->  
+      -->
+      <authorization>
+        <allow users="?"/>
+      </authorization>
     </system.web>
     <system.webServer>
       <handlers>
@@ -67,7 +72,7 @@
             Set the value here to allow people to push/delete packages from the server.
             NOTE: This is a shared key (password) for all users.
     -->
-    <add key="apiKey" value=""/>
+    <add key="apiKey" value="AA19C1C2-7137-4DB5-9593-821ABEFD095D"/>
     <!--
             Change the path to the packages folder. Default is ~/Packages.
             This can be a virtual or physical path.
