--- a/KerbalWinDownloader/App.config
+++ b/KerbalWinDownloader/App.config
@@ -2,7 +2,8 @@
 <configuration>
   <appSettings>
     <add key="kerbalInstallPath" value="M:\Steam\steamapps\common\Kerbal Space Program"/>
-    <add key="kerbalModServer" value="http://localhost/KerbalServer/Nuget"/>
+    <add key="kerbalModServer" value="http://kerbalmodserver.azurewebsites.net/nuget"/>
+    <!--<add key="kerbalModServer" value="http://localhost/KerbalServer/Nuget"/>-->
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
