Fixed folder selection

--- a/KerbalServer/Web.config
+++ b/KerbalServer/Web.config
@@ -42,6 +42,7 @@
     <security allowRemoteAccess="false"/>
   <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/App_Data"/></elmah><location path="elmah.axd" inheritInChildApplications="false">
     <system.web>
+      <httpRuntime maxRequestLength="15000" />
       <httpHandlers>
         <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah"/>
       </httpHandlers>
